# course

./: README.md  discardconfig  package.json  pnpm-lock.yaml  test-phase2.md  tsconfig.app.json  vite.config.ts
backend/: .gitignore  Dockerfile  Dockerfile.prod  README-PHASE2.md  README-SEARCH.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.example  env.prod.example  pyproject.toml  pytest.ini  requirements.txt
backend/.github/workflows/: ci-cd.yml
backend/alembic/: env.py
backend/alembic/versions/: add_invitations_table.py  f7c453043d8d_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/core/: cache.py  config.py  monitoring.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  content.py  course.py  enrollment.py  invitation.py  note.py  progress.py  user.py
backend/app/schemas/: __init__.py  content.py  course.py  dashboard.py  enrollment.py  invitation.py  note.py  progress.py  search.py  token.py  user.py
backend/app/services/: auth.py  course.py  email.py  invitation_service.py  search.py  storage.py  user_service.py
backend/app/tasks/: __init__.py  celery_app.py  notifications.py  search.py  video.py
backend/nginx/: nginx.conf  nginx.local.conf
backend/nginx/ssl/: README.md
backend/scripts/: create_admin.py  deploy.sh  init_db.py
backend/tests/: conftest.py  test_auth.py  test_courses.py  test_enrollments.py  test_invitations.py  test_notes.py  test_security.py  test_storage.py  test_users.py
frontend/: .env  (+4 more)
(+91 files in other folders)
